--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,21 @@
     "version": "0.0.5",
     "main": "index.js",
     "scripts": {
-      "dev": "npx vite build --watch",
-      "build": "npx vite build"
+        "dev": "npx vite build --watch",
+        "build": "npx vite build"
     },
     "author": "",
     "license": "ISC",
     "description": "",
     "type": "module",
     "dependencies": {
-      "preact": "^10.26.3",
-      "preact-custom-element": "^4.3.0",
-      "pocketbase": "^0.25.1"
+        "buffer": "^6.0.3",
+        "pocketbase": "^0.25.1",
+        "preact": "^10.26.3",
+        "preact-custom-element": "^4.3.0"
     },
     "devDependencies": {
-      "@preact/preset-vite": "^2.10.1",
-      "vite": "^6.1.0"
+        "@preact/preset-vite": "^2.10.1",
+        "vite": "^6.1.0"
     }
 }
