GPL license switchover in the package.json files

--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   "workspaces": ["client", "server", "scripts"],
   "author": "contact@ivy242.net",
   "bin": "scripts/bin.js",
-  "license": "ISC",
+  "license": "GPL",
   "description": ""
 }
