--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
         "build": "npx vite build"
     },
     "author": "",
-    "license": "ISC",
+    "license": "GPL",
     "description": "",
     "type": "module",
     "dependencies": {
